fix: mapper tilsynbehov fra medisinskgrunnlag